--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-djangodjangorestframeworkpsycopg2-binarydjangorestframework-simplejwtdrf-yasgdjango-cors-headers
+django
+djangorestframework
+psycopg2-binary
+djangorestframework-simplejwt
+drf-yasg
+django-cors-headers
+django-filter
